blocks rearrangement, custom logo dimensions on small screen fix

--- a/_partials/clients/clients.less
+++ b/_partials/clients/clients.less
@@ -23,13 +23,18 @@
     width:180px;
   }
 
+@media (max-width:400px ) {
+  .client>img.creative,
+  .client>img.intertrade {
+    width:105%;
+  }
+}
+
 .align {
   width:120px;
 }
 
-.creative {
-  width:190px;
-}
+
 
 @media (width: 320px) {
   .client > img {
