--- a/_partials/hero/hero.less
+++ b/_partials/hero/hero.less
@@ -40,6 +40,6 @@ header {
 @media(max-width:462px) {
 	.controls > button {
 		width: 250px;
-		margin-top: 10px;
+		margin-top: 2px;
 	}
 }
